--- a/backend/catalog_pbaibol/src/main/resources/application.yml
+++ b/backend/catalog_pbaibol/src/main/resources/application.yml
@@ -2,10 +2,10 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cpb
+    url: jdbc:mariadb://127.0.0.1:3306/cpbt
     username:
     password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     database: mysql
     show-sql: true
