--- a/backend/catalog_pbaibol/src/main/resources/application.yml
+++ b/backend/catalog_pbaibol/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/cpbt
+    url: jdbc:mariadb://127.0.0.1:3306/cpb
     username:
-    password:
+    password: 
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     database: mysql
