--- a/backend/catalog_pbaibol/docker-compose-.yml
+++ b/backend/catalog_pbaibol/docker-compose-.yml
@@ -24,3 +24,9 @@ services:
       MYSQL_PASSWORD: mypassword
     ports:
       - "3306:3306"
+    networks:
+      - cpbnetwork
+
+networks:
+  cpbnetwork:
+    driver: bridge
