remuve_optionaò_to_entity_person

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 backend/catalog_pbaibol/src/main/resources/application.yml
 backend/catalog_pbaibol/src/main/resources/application.yml
+/.metadata/
