--- a/catalog_pbaibol/src/main/resources/application.yml
+++ b/catalog_pbaibol/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
     port: 8080
 
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/testdb
-    username: root
-    password: MYsql
+    url: jdbc:mariadb://127.0.0.1:3306/testdb?allowPublicKeyRetrieval=false&useSSL=false
+    username: 
+    password:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     database: mysql
