move appyml on gitignior

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 backend/catalog_pbaibol/src/main/resources/application.yml
 backend/catalog_pbaibol/src/main/resources/application.yml
 /.metadata/
+catalog_pbaibol/src/main/resources/application.yml
