--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ backend/catalog_pbaibol/src/main/resources/application.yml
 backend/catalog_pbaibol/src/main/resources/application.yml
 /.metadata/
 catalog_pbaibol/src/main/resources/application.yml
+catalog_pbaibol/src/main/resources/application.yml
