--- a/catalog_pbaibol/src/main/resources/application.yml
+++ b/catalog_pbaibol/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: jdbc:mariadb://127.0.0.1:3306/testdb?allowPublicKeyRetrieval=false&useSSL=false
     username: root
-    password: 
+    password: MYsql
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     database: mysql
@@ -31,7 +31,7 @@ spring:
 
   datasource:
     url: jdbc:mariadb://127.0.0.1:3306/cpbt
-    username:
+    username: marco
     password:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
