--- a/catalog_pbaibol/src/main/resources/application.yml
+++ b/catalog_pbaibol/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
 
   datasource:
     url: jdbc:mariadb://127.0.0.1:3306/cpbt
-    username: marco
+    username:
     password:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
